delete unused class files